# MNFRESCOX

./: .gitignore  README.md  debug_timing.py  descargar.py  exits.py  muestraexcel.py  requirements.txt  run.py
DESCARGADOR/: cliente.py  combinador.py  config.py  descargador.py  exportador.py  gaps.py  parser.py  timestamps.py  utils.py  verificador.py
PANEL BACKTESTING/CONFIGURACION/: config.py  validador_config.py
PANEL BACKTESTING/DATOS/: cargador.py  perturbaciones.py  resampleo.py  validador.py
PANEL BACKTESTING/ESTRATEGIAS/: GUIA_ESTRATEGIAS.md  ema_tendencia.py  rsi_reversion.py  vat_absorcion.py  vwap_distance_reversion.py  vwapcvd.py
PANEL BACKTESTING/MOTOR/: Cargo.toml  __init__.py  wrapper.py
PANEL BACKTESTING/MOTOR/src/: capital.rs  lib.rs  simulador.rs  tipos.rs
PANEL BACKTESTING/NUCLEO/: base_estrategia.py  contexto.py  integridad.py  paridad_riesgo.py  proyeccion.py  registro.py  runner_fijo.py  tipos.py
PANEL BACKTESTING/OPTIMIZACION/: __init__.py  metricas.py  puntuacion.py  runner.py  samplers.py
PANEL BACKTESTING/REPORTES/: __init__.py  excel.py  formatos.py  html.py  informe.py  persistencia.py  rich.py  terminal.py  tv_library.py
PANEL BACKTESTING/SALIDAS/: fijo.py  paridad.py  personalizada.py  trailing.py  velas.py
PANEL BACKTESTING/TESTS/: test_cache_indicadores.py  test_html_tooltip.py  test_informe.py  test_paridad_config.py  test_paridad_riesgo.py  test_rich_params.py  test_trailing_exit.py  test_vat.py  test_vwap_distance_reversion.py  test_vwapcvd.py
github/: actualizar.py  git_push.py
(+4 files in other folders)
